--- a/build.gradle
+++ b/build.gradle
@@ -4,16 +4,16 @@ allprojects {
     buildscript {
         repositories {
             google()
-            jcenter()
+            mavenCentral()
         }
         dependencies {
-            classpath "com.android.tools.build:gradle:3.1.2"
+            classpath 'com.android.tools.build:gradle:8.3.0-rc02'
         }
     }
 
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
@@ -26,7 +26,7 @@ subprojects {
     }
 }
 
-task clean(type: Delete) {
+tasks.register('clean', Delete) {
     delete rootProject.buildDir
     delete project(':demo').buildDir
 }
