--- a/demo/android/build.gradle
+++ b/demo/android/build.gradle
@@ -3,17 +3,17 @@ apply plugin: 'com.google.protobuf'
 
 buildscript {
     dependencies {
-        classpath "com.google.protobuf:protobuf-gradle-plugin:0.8.3"
-        classpath 'com.google.gms:google-services:4.0.1'
+        classpath("com.google.protobuf:protobuf-gradle-plugin:0.9.4")
+        classpath 'com.google.gms:google-services:4.4.2'
     }
 }
 
 android {
-    compileSdkVersion 27
+    compileSdk 34
     defaultConfig {
         applicationId "com.google.capillary.demo.android"
-        minSdkVersion 19
-        targetSdkVersion 27
+        minSdkVersion 21
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -30,39 +30,44 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     packagingOptions {
-        exclude 'build-data.properties'
+        resources {
+            excludes += ['build-data.properties']
+        }
     }
+    namespace 'com.google.capillary.demo.android'
 }
 
 // Checkstyle doesn't run automatically with android
-task checkstyleMain(type: Checkstyle) {
+tasks.register('checkstyleMain', Checkstyle) {
     source "src/main/java"
     include '**/*.java'
     classpath = files()
 }
 check.dependsOn checkstyleMain
 
-def grpcVersion = '1.7.0' // CURRENT_GRPC_VERSION
+def grpcVersion = '1.61.0' // CURRENT_GRPC_VERSION
 
 dependencies {
     implementation project(':demo:common')
-    implementation 'com.google.capillary:lib-android:1.0.0'
-    implementation('com.google.crypto.tink:tink-android:1.1.0', {
+    //implementation 'com.google.capillary:lib-android:1.0.0'
+    implementation project(":lib-android")
+    implementation('com.google.crypto.tink:tink-android:1.12.0', {
         exclude group: 'com.google.protobuf'
     })
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:support-v4:27.1.1'
-    implementation 'javax.annotation:javax.annotation-api:1.2'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    implementation 'com.google.protobuf:protobuf-java:3.4.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.protobuf:protobuf-java:3.25.2'
     implementation "io.grpc:grpc-okhttp:${grpcVersion}"
     implementation "io.grpc:grpc-protobuf:${grpcVersion}"
     implementation "io.grpc:grpc-stub:${grpcVersion}"
-    implementation 'com.google.firebase:firebase-core:16.0.0'
-    implementation 'com.google.firebase:firebase-messaging:17.0.0'
-    implementation 'com.android.support:multidex:1.0.3'
-    implementation 'joda-time:joda-time:2.9.9'
-    androidTestImplementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.google.firebase:firebase-core:21.1.1'
+    implementation 'com.google.firebase:firebase-messaging:24.0.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'joda-time:joda-time:2.12.6'
+    androidTestImplementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'com.google.android.gms:play-services-auth:21.2.0'
 }
 
 protobuf {
@@ -77,7 +82,7 @@ protobuf {
     generateProtoTasks {
         all().each { task ->
             task.builtins {
-                add java
+                java {}
             }
         }
         all()*.plugins {
