--- a/demo/android/src/main/AndroidManifest.xml
+++ b/demo/android/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.google.capillary.demo.android">
+<manifest xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
   <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -8,14 +8,18 @@
       android:allowBackup="false"
       android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name"
-      android:name="android.support.multidex.MultiDexApplication"
+      android:name="androidx.multidex.MultiDexApplication"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
-      android:theme="@style/AppTheme">
+      android:theme="@style/AppTheme"
+      android:fullBackupContent="true"
+      android:dataExtractionRules="@xml/data_extraction_rules"
+      tools:targetApi="s">
 
     <activity
         android:launchMode="singleTop"
-        android:name=".MainActivity">
+        android:name=".MainActivity"
+        android:exported="true">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
         <category android:name="android.intent.category.LAUNCHER"/>
@@ -38,7 +42,8 @@
       </intent-filter>
     </service>
 
-    <receiver android:name=".DeviceUnlockedBroadcastReceiver">
+    <receiver android:name=".DeviceUnlockedBroadcastReceiver"
+        android:exported="true">
       <intent-filter>
         <action android:name="android.intent.action.USER_PRESENT"/>
       </intent-filter>
