--- a/lib-android/src/main/AndroidManifest.xml
+++ b/lib-android/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.google.capillary.android"/>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" />
