--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'application'
 
 dependencies {
     implementation project(':lib')
-    implementation 'commons-cli:commons-cli:1.4'
-    implementation 'com.google.crypto.tink:tink:1.1.0'
+    implementation 'commons-cli:commons-cli:1.6.0'
+    implementation 'com.google.crypto.tink:tink:1.12.0'
 }
 
 startScripts.enabled = false
 
-task ecdsaKeyPairGenerator(type: CreateStartScripts) {
+tasks.register('ecdsaKeyPairGenerator', CreateStartScripts) {
     mainClassName = 'com.google.capillary.tools.EcdsaKeyPairGenerator'
     applicationName = 'ecdsa-key-pair-generator'
     classpath = startScripts.classpath
@@ -18,4 +18,10 @@ task ecdsaKeyPairGenerator(type: CreateStartScripts) {
 applicationDistribution.into('bin') {
     from(ecdsaKeyPairGenerator)
     fileMode = 0755
+    duplicatesStrategy 'exclude'
+}
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 }
